---------------------------------------------------------------------------------------------------
Version: 0.4.0
Date: ???
  Changes:
    - Improved speed calculation for asteroid-collector using all the new exposed properties
---------------------------------------------------------------------------------------------------
Version: 0.3.2
Date: ???
  Changes:
    - Improved filters for asteroid-collector: read all filters, ignore if controlled by circuit
---------------------------------------------------------------------------------------------------
Version: 0.3.1
Date: 2025-06-21
  Bugfixes:
    - Fixed waste of performance when looking for beacons
---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: 2025-06-20
  Features:
    - Calculate pollution rates
  Changes:
    - Improved accuracy of beacon effects
    - Improved fuel detection for burner energy sources: no fuel for non-standard filters, uses currently_burning and whole inventory if not ambiguous
    - Improved fluid energy sources: various combinations of burns_fluid / scale_fluid_usage / fluid_usage_per_tick
  Bugfixes:
    - Fixed crash with offshore-pump entities that have a filtered fluidbox
---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 2025-06-13
  Changes:
    - Improved agricultural towers
    - Improved asteroid collectors
    - New API for GUI integration
    - Improved number formatting
---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: 2025-06-09
  Features:
    - Get configuration of LuaEntity
    - Supports ghosts of all kinds (marked for deconstruction, marked for upgrade, module removal & insertion plans)
    - Enhance configurations with selection of fuel and fluid temperatures
    - Check multiple configurations for equality
    - Calculate production rates of configuration